Fixed footer links spacing, footer white area at bottom when screen size shrinks, fixed  image in landing not centered with text, fixed landing not centered in middle, added more height to the plans

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ p {
 }
 
 .section {
-  margin: 0px 40px;
+  margin: 0 40px;
 }
 
 button:hover {
@@ -56,6 +56,18 @@ button:hover {
 }
 
 /* NAV */
+
+#landing {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 16px;
+}
 
 nav {
   height: 80px;
@@ -136,15 +148,6 @@ nav {
   left: 0;
 }
 
-.container__page {
-  width: 100%;
-  max-width: 1300px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .btn__menu {
   background-color: transparent;
   font-size: 40px;
@@ -221,7 +224,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 0 12px;
+  align-items: center;
   height: calc(100vh - 80px);
 }
 
@@ -599,6 +602,7 @@ nav {
   justify-content: space-around;
   padding: 10px 0px;
   border: 1px solid lightgrey;
+  height: 180px;
 }
 
 .plan__name {
@@ -628,6 +632,7 @@ nav {
   border: 1px solid lightgrey;
   width: 100%;
   padding: 10px 0px;
+  height: 300px;
 }
 
 .plan__target {
@@ -727,6 +732,8 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #6415ff;
+  padding-bottom: 20px;
 }
 
 .footer__sections {
@@ -785,14 +792,16 @@ hr {
 
 .copyright {
   color: white;
+  width: calc(100%/3.3);
+  text-align: center;
 }
 
 .footer__links {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  width: 8%;
+  justify-content: center;
+  width: calc(100%/3.3);
 }
 
 .footer__link {
@@ -800,6 +809,7 @@ hr {
   border: 1px solid white;
   border-radius: 30px;
   padding: 10px;
+  margin: 0 6px;
 }
 
 .footer__link:hover {
@@ -808,6 +818,10 @@ hr {
 
 .facebook {
   padding: 10px 13px;
+}
+
+.logo__wrapper {
+  width: calc(100%/3.3);
 }
 
 /* Media Size Section */
@@ -830,6 +844,7 @@ hr {
     font-size: 16px;
     margin: 20px 0px;
   }
+
 }
 
 @media (max-width: 820px) {
@@ -850,10 +865,10 @@ hr {
     border-radius: 0px 0px 10px 10px;
   }
 
-nav {
-  width: 80%;
-  max-width: 100vw;
-}
+  nav {
+    width: 80%;
+    max-width: 100vw;
+  }
 
   .nav__container {
     width: 100%;
@@ -865,7 +880,7 @@ nav {
   }
 
   .nav__logo {
-    padding-right:20px;
+    padding-right: 20px;
   }
 
   .buynow {
@@ -886,6 +901,7 @@ nav {
     align-items: center;
     height: fit-content;
     width: 85vw;
+
   }
 
   #landing,
@@ -894,7 +910,7 @@ nav {
   #steps,
   #values,
   #pricing {
-    margin-bottom: 30px;
+    margin-bottom: 100px;
   }
 
   .landing__description,
@@ -1056,16 +1072,15 @@ nav {
   }
 
   .footer__link {
-    font-size: 12px;
-    padding: 8px;
-  }
-
-  .footer__links {
-    width: 18%;
+    padding: 6px;
   }
 
   .facebook {
-    padding: 8px 10px;
+    padding: 6px 9px;
+  }
+
+  .footer__links {
+    margin: 0 2px;
   }
 
   .features__feature--description {
@@ -1084,7 +1099,15 @@ nav {
   }
 }
 
+@media (max-width: 620px) {
+  .copyright {
+    font-size: 14px;
+    padding: 6px 0px 10px 0px;
+  }
+}
+
 @media (max-width: 570px) {
+
   #footer {
     height: fit-content;
     padding-bottom: 20px;
